# rust-opus

./: .gitignore  Cargo.toml  NOTICE  README.md  RELEASE.md  build.rs  check_opus_version.py  generate_weights.py  strip_weights.py  vendor_opus.py
.github/workflows/: check-opus-version.yml  ci.yml  codeql.yml  release.yml
patches/: 0001-Add-OPUS_RUNTIME_WEIGHTS-cmake-option.patch  0002-Fix-binary-mode-for-write_lpcnet_weights-on-Windows.patch  0003-Enable-OSCE_BWE-when-OPUS_OSCE-is-set.patch  0004-Add-OSCE-BWE-weights-to-write_lpcnet_weights.patch
src/: bindings.rs  lib.rs
