[package]
name = "opus-head-sys"
version = "0.1.0"
edition = "2021"
authors = ["Marucs Asteborg <xnorpx@outlook.com>"]
license = "MIT OR Apache-2.0"
description = "FFI bindings to the Opus audio codec (vendored)"
repository = "https://github.com/xnorpx/rust-opus"
documentation = "https://docs.rs/opus-head-sys"
keywords = ["opus", "audio", "codec", "ffi", "bindings"]
categories = ["external-ffi-bindings", "multimedia::audio"]
links = "opus"
build = "build.rs"
exclude = [
    "*.py",
    "*.bin",
    "*.bin.gz",
    "*.zip",
    "__pycache__/",
    ".github/",
    "vendored/opus/.git*",
    "vendored/opus/.gitlab-ci.yml",
    "vendored/opus/doc/",
    "vendored/opus/tests/",
    "vendored/opus/training/",
    "vendored/opus/dnn/**/*.pth",
    "vendored/opus/dnn/**/*.ipynb",
    "vendored/opus/dnn/**/*.tar",
    "vendored/opus/dnn/**/*.py",
    "vendored/opus/dnn/torch/",
    "vendored/opus/scripts/",
    "vendored/opus/meson/",
]

[dependencies]

[build-dependencies]
cmake = "0.1"

[features]
default = ["dnn", "fast-math"]
# Enable DNN-based features: DRED (Deep REDundancy) and OSCE (Opus Speech Coding Enhancement)
# DRED provides packet loss resilience, OSCE provides improved audio quality
# Requires loading weights at runtime via OPUS_SET_DNN_BLOB()
dnn = []
# Enable fast math optimizations (enables OPUS_FLOAT_APPROX and OPUS_FAST_MATH)
fast-math = []
